# p-o-x-clone

./: .gitignore  CMakeLists.txt  README.md  build_pox_game.bat
apps/desktop_sdl/: CMakeLists.txt  main.cpp  sdl_audio.cpp  sdl_audio.hpp  sdl_input.cpp  sdl_input.hpp  sdl_video.cpp  sdl_video.hpp
assets/bootrom/: README.txt
assets/packs/pox-combat-pack-v2/: README.md
assets/packs/pox-master-library/: atlas_map.json  manifest.json
assets/packs/pox-ultimate-production-pack/: atlas_map.json
assets/sprites/: handheld_creature_list.txt
assets/sprites/atlas/: README.md  po-x_atlas_layout.md  po-x_sprite_generator.py  po-x_sprite_metadata.json
assets/sprites/handheld/: README.txt
assets/testroms/: README.txt
assets/wad/: index_dev.json
cmake/: FindSDL2.cmake
config/: README.md  audio.cfg  controls.cfg  game.cfg  network.cfg  video.cfg
docs/: ARCHITECTURE.md  AUDIO_PIPELINE.md  COMBAT_WORLD_SYSTEM.md  CONFIG_SYSTEM.md  CPU8_ISA.md  CREATURE_SYSTEM.md  DEBUGGING.md  DISPLAY_PIPELINE.md  GAME_DATABASE.md  GAME_DESIGN_OVERVIEW.md  GAME_FEATURES.md  GDD.md  HOMEBREW_SDK.md  MAZE_SYSTEM.md  MEMORY_MAP.md  OPCODES.md  POX_CORE_ARCHITECTURE_NO_QUBIT.md  POX_RESEARCH.md  README.md  RESOURCE_TECH_TREE_SYSTEM.md  REVERSE_ENGINEERING.md  RF_COMMUNICATION.md  RF_WIFI_INTERNET_API.md  ROM_FORMAT.md  ROOM_UNIVERSE_SYSTEM.md  RPG_MMO_FEATURES.md  SAVE_STATES_REWIND.md  SAVE_SYSTEM.md  SOURCE_CODE_OVERVIEW.md  TDD.md  TIMING.md  UML_OVERVIEW.md  WIRELESS_AND_INTERNET.md  biome_data_table.csv  condition_data_table.csv  counter_data_table.csv  interaction_data_table.csv  zone_data_table.csv
docs/assets/: creature_list.txt  font_README.txt  skins_README.txt  sprites_README.txt
eeprom/: README.md  eeprom_storage.cpp  eeprom_storage.hpp  eeprom_utils.cpp  eeprom_utils.hpp
examples/: integration_demo.cpp
firmware/: README.md  firmware_main.cpp  firmware_main.hpp  firmware_utils.cpp  firmware_utils.hpp
include/nlohmann/: json.hpp
include/pox/: log.hpp  pox.hpp  types.hpp  version.hpp
include/pox/combat/: combat.hpp
include/pox/config/: config.hpp
include/pox/core/: bus.hpp  clock.hpp  events.hpp
include/pox/db/: database.hpp
include/pox/debug/: debugger.hpp  disasm.hpp  trace.hpp
include/pox/game/: continents.hpp  crc16.hpp  creature_db.hpp  creature_extended.hpp  creature_record.hpp  creature_runtime.hpp  game_logic.hpp  kingdoms.hpp  main_character.hpp  menu_text.hpp  rpg_systems.hpp  settings.hpp  wad_resources.hpp  zones.hpp
include/pox/hw/: audio.hpp  cartridge.hpp  cpu8.hpp  display.hpp  input.hpp  memory.hpp  power.hpp  timer.hpp
include/pox/lcd/: pox_display.hpp  pox_lcd_fb_1bpp.hpp  pox_lcd_segment_icons.hpp  pox_lcd_sprites_1bpp.hpp  pox_sprite_to_segment.hpp  pox_ui_icons.hpp
include/pox/maze/: maze.hpp
include/pox/resource/: resource.hpp
include/pox/rpg/: rpg.hpp
include/pox/sdl/: tile_ui.hpp  ui_framework.hpp
include/pox/ui/: menu_renderer.hpp  settings_renderer.hpp  zone_renderer.hpp
include/pox/universe/: universe.hpp
include/pox/util/: bitops.hpp  checksum.hpp  fileio.hpp  rom.hpp  serialize.hpp
include/pox/wireless/: wireless.hpp
include/pox/world/: biome_framework.hpp
patches/: README.md  patch_system.cpp  patch_system.hpp  patch_utils.cpp  patch_utils.hpp
po-x_sprite_loader/: CMakeLists.txt  main.cpp  po-x_micro_index.txt  pox1_loader.cpp  pox1_loader.hpp  sprite_decoder.cpp  sprite_decoder.hpp
pox-combat-pack-v2/: atlas_map.json  manifest.json
pox-final-cartridge-system/: README.md
pox-final-cartridge-system/docs/: README.md  boot_animation.md
pox-final-cartridge-system/examples/: pox_project.json
pox-final-cartridge-system/tools/node/: save_builder.js  sfx_synth.js
pox-master-library/: README.md
pox-ultimate-production-pack/: README.md  manifest.json
roms/: README.md  demo_creature_slot0.poxr  demo_creature_slot0.rom  demo_vramfill.poxr  demo_vramfill.rom  fullgame.poxr  new_game_full.poxr
sdk/: README.md
sdk/examples/hello_world/: README.md  hello_world.poxr  main.pseudo.asm
sdk/examples/menu_demo/: main.pseudo.asm
sdk/examples/sound_test/: main.pseudo.asm
sdk/examples/sprite_demo/: main.pseudo.asm
sdk/include/: pox_hw.inc
src/pox/: log.cpp  main.cpp  pox.cpp
src/pox/combat/: combat.cpp
src/pox/config/: config.cpp
src/pox/core/: bus.cpp  clock.cpp  events.cpp  events.hpp
src/pox/db/: database.cpp
src/pox/debug/: debugger.cpp  disasm.cpp  trace.cpp
src/pox/game/: continents.cpp  continents.hpp  crc16.cpp  creature_db.cpp  creature_db.hpp  creature_extended.cpp  creature_extended.hpp  creature_record.cpp  creature_record.hpp  creature_runtime.cpp  game_logic.cpp  game_logic.hpp  inventory.cpp  inventory.hpp  kingdoms.cpp  kingdoms.hpp  main_character.cpp  main_character.hpp  menu_text.cpp  rpg_systems.cpp  rpg_systems.hpp  settings.cpp  settings.hpp  wad_resources.cpp  wad_resources.hpp  zones.cpp  zones.hpp
src/pox/hw/: audio.cpp  audio.hpp  cartridge.cpp  cartridge.hpp  cpu8.cpp  display.cpp  input.cpp  memory.cpp  power.cpp  timer.cpp
src/pox/lcd/: pox_display.cpp  pox_lcd_fb_1bpp.cpp  pox_lcd_segment_icons.cpp  pox_lcd_sprites_1bpp.cpp  pox_sprite_to_segment.cpp  pox_ui_icons.cpp
src/pox/maze/: maze.cpp
src/pox/resource/: resource.cpp  (+1 more)
tests/: CMakeLists.txt  main.cpp  test_biome_framework.cpp  test_bitops.cpp  test_checksum.cpp  test_cpu_decode_smoke.cpp  test_creature_db.cpp  test_creature_extended.cpp  test_csv_data.cpp  test_rom_container.cpp
tools/: assemble_pox.py
tools/audio_converter/: CMakeLists.txt  main.cpp
tools/cpp_asset_tools/: README.md  cartridge_packer.cpp  png_quantizer.cpp  pox_packer.cpp  sfx_synth.cpp  sram_builder.cpp  wad_builder.cpp
tools/creature_tool/: creature_tool.cpp  creature_tool.hpp  main.cpp
tools/rom_packer/: CMakeLists.txt  main.cpp
tools/sprite_converter/: CMakeLists.txt  main.cpp
updates/: README.md  update_manager.cpp  update_manager.hpp  update_utils.cpp  update_utils.hpp
(+55 files in other folders)
